Stylistic changes and different text

--- a/jothiRameshWebsite.html
+++ b/jothiRameshWebsite.html
@@ -5,18 +5,19 @@
     <title>Jothi Norio Ramesh</title>
     <style>
         #Heading {
-            color: #00FF00;
-            font-family:Arial, Helvetica, sans-serif;
+            color: #c9aabc;
+            font-family: Courier New;
+            text-align: center;
         }
 
         body {
-            background-color: black;
+            background: linear-gradient(90deg, rgb(19, 128, 162), rgb(72, 7, 7))
         }
 
     </style>
 </head>
 <body>
-    <h1 id="Heading">Website of Jothi Ramesh</h1>
+    <h1 style="font-size: 18px;" id="Heading">Hello, my name is Jothi Ramesh. Thank you for stumbling upon my website!</h1>
 
 </body>
 
